Minor css changes to fix layout rendering on tablet devices

--- a/src/css/gem-table.css
+++ b/src/css/gem-table.css
@@ -65,7 +65,7 @@
 .table-section-heading {
   background-color: white;
   border: 1px solid #CCC;
-  padding: 0 0 3px 10px;
+  padding: 2px 0 3px 10px;
   font-family: sans-serif;
   font-variant: small-caps;
   font-size: 1.1em;
