--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   background-color: #fee9aa;
   color: #333;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size:0.9em;
 }
 
 .top-row {
